--- a/Justin.1800Contacts.Web/Views/Home/Index.cshtml
+++ b/Justin.1800Contacts.Web/Views/Home/Index.cshtml
@@ -1,24 +1,41 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+	<h1>ScheduleTron</h1>
+	<p class="lead">Manage your class prerequisites</p>
 </div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
+
+<div ng-controller="ClassScheduleController">
+
+	<div data-ng-show="showSuccess" class="alert alert-success" role="alert">
+		<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+		<strong>Success</strong>
+	</div>
+
+	<div data-ng-show="showError" class="alert alert-danger" role="alert">
+		<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+		{{errorMessage}}
+	</div>
+
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Class Sorter - Add a list of classes and prerquisites to the box on the left and click the button with the arrow to sort.</h3>
+		</div>
+		<div class="panel-body">
+			<div class="col-md-6">
+				<textarea class="form-control" rows="8" id="input" style="max-width:100%;" ng-model="classList"></textarea>
+			</div>
+			<div class="col-md-1">
+				<button type="button" class="btn btn-default btn-lg" ng-click="processClasses('#input')">
+					<span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
+				</button>
+			</div>
+			<div class="col-md-5">
+				<textarea class="form-control" rows="8" id="output" style="max-width:100%;" ng-model="sortedClasses"></textarea>
+			</div>
+
+		</div>
+	</div>
+
 </div>
+
+@Scripts.Render("~/bundles/classSchedule")
+
